2004-07-30  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.py: Add 'set_keep_all_estimates'.

2004-06-10  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* geometry3d.py: Fix rounding errors.

2004-06-03  Pieter Dumon  <Pieter.Dumon@UGent.be>

	* field.cpp: Don't propagate inside a BlochStack.
	* icache.cpp: Don't make flipped scatterers for BlochStacks.

2004-06-03  Pieter Dumon  <Pieter.Dumon@UGent.be>

	* geometry3d.py: New file.
	* geometry.py: Add compare functions.

2004-06-03  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* S_scheme_fields.cpp: Fix transparent scatterers for MonoStacks.

2004-04-15  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* field.cpp: Detect and fix overflow.

2004-04-04  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Lambda can now be complex.
	* defs.h: Ditto.
	* material.h: Ditto.
	* cavity.cpp: Ditto.

2004-02-12  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* geometry.py: Relax tolerance.

2003-12-04  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Wrap mode_correction enum.

2003-12-04  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* mode.h: Remove wrapper.

2003-12-04  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* camfr_wrap.cpp: Add limit in fw_bw.

2003-11-17  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* defs.h: Rework configuration globals.
	* defs.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2003-11-17  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* defs.h: Add global.section_solver.
	* defs.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2003-11-17  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* waveguide.h: Rework eps_at, mu_at.
	* stack.h: Ditto.
	* stack.cpp: Ditto.
	* bloch.h: Ditto.

2003-11-14  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* camfr_wrap.cpp: Wrap set_estimate for Slab.

2003-11-04  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* defs.cpp: Undo change in unstable_exp_threshold.

2003-11-03  Lieven Vanholme  <Lieven.Vanholme@ugent.be>
